--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/animate.css">
-    <link rel="stylesheet" type="text/css" href="./vendor/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="./vendor/bootstrap/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -116,11 +116,89 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="container-fluid what-we">
+            <div class="container" id="dreamHouse">
+                <div class="row">
+                    <div class="col-12 p-0 sessao-what-we">
+                        <div class="row">
+                            <div class="col-6 what-we-conteudo p-0">
+                                <div class="col-12">
+                                    <h3>What We Do</h3>
+                                
+                                    <p>Design Studio is an architectural and urban design practice with an international reputation for design quality, for pioneering environmental expertise and a progressive architectural approach.</p>
+                                
+                                    <a class="leiaMais">read more</a>
+                                </div>
+                            </div>
+                            <div class="col-6 p-0">
+                                <div class="row">
+                                    <div class="col-lg-6 p-0">
+                                        <img src="img/quadro1.jpg" alt="" class="img-responsive">
+                                    </div>
+                                    <div class="col-lg-6 p-0">
+                                        <img src="img/quadro4.png" alt="" class="img-responsive">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-6 p-0">
+                                        <img src="img/quadro3.png" alt="" class="img-responsive">
+                                    </div>
+                                    <div class="col-lg-6 p-0">
+                                        <img src="img/quadro2.png" alt="" class="img-responsive">
+                                    </div>
+                                </div>                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="icones">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 p0 icones">
+                        <i class="material-icons">
+                            verified_user
+                        </i>
+                        <h4 class="text-center">Missão</h4>
+                    </div>
+                    <div class="col-lg-3 p0 icones">
+                        <i class="material-icons">note</i>
+                        <h4 class="text-center">Projetos</h4>
+                    </div>
+                    <div class="col-lg-3 p0 icones">
+                        <i class="material-icons">star</i>
+                        <h4 class="text-center">Awards</h4>
+                    </div>
+                    <div class="col-lg-3 p0 icones">
+                        <i class="material-icons">account_balance</i>
+                        <h4 class="text-center">Contacts</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="practicing">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>Practicing at the confluence of art, architecture, and building technology, we collaborate with clients to create buildings and environments 
+                           in dialogue with culture and place.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
    
 
     <script src="./vendor/Jquery/jquery.js"></script>
     <script type="text/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./vendor/fontawesome/js/fontawesome.min.js">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="./js/script.js"></script>
     <script>
