--- a/index.html
+++ b/index.html
@@ -50,16 +50,26 @@
         <div class="container-fluid p-0" id="section-galeria">
             <div class="container galeria">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-4 wow animated zoomIn delay-1">
                         <img src="img/1.jpg" alt="">
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 wow animated zoomIn delay-2">
                         <img src="img/3.jpg" alt="">
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 wow animated zoomIn delay-3">
                         <img src="img/2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="modal" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <i class = "material-icons fechar-modal">cancelar</i>                                                   
+                        <div class="modal-header">
+                            <img src=" " alt="" class="img-fluid">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -125,27 +135,27 @@
                         <div class="row">
                             <div class="col-6 what-we-conteudo p-0">
                                 <div class="col-12">
-                                    <h3>What We Do</h3>
+                                    <h3 class="wow animated bounceInLeft">What We Do</h3>
                                 
-                                    <p>Design Studio is an architectural and urban design practice with an international reputation for design quality, for pioneering environmental expertise and a progressive architectural approach.</p>
+                                    <p class="wow animated bounceInLeft">Design Studio is an architectural and urban design practice with an international reputation for design quality, for pioneering environmental expertise and a progressive architectural approach.</p>
                                 
-                                    <a class="leiaMais">read more</a>
+                                    <a class="leiaMais wow animated zoomIn">read more</a>
                                 </div>
                             </div>
                             <div class="col-6 p-0">
                                 <div class="row">
-                                    <div class="col-lg-6 p-0">
+                                    <div class="col-lg-6 p-0 wow animated zoomIn delay-1">
                                         <img src="img/quadro1.jpg" alt="" class="img-responsive">
                                     </div>
-                                    <div class="col-lg-6 p-0">
+                                    <div class="col-lg-6 p-0 wow animated zoomIn delay-4">
                                         <img src="img/quadro4.png" alt="" class="img-responsive">
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-6 p-0">
+                                    <div class="col-lg-6 p-0 wow animated zoomIn delay-3">
                                         <img src="img/quadro3.png" alt="" class="img-responsive">
                                     </div>
-                                    <div class="col-lg-6 p-0">
+                                    <div class="col-lg-6 p-0 wow animated zoomIn delay-2">
                                         <img src="img/quadro2.png" alt="" class="img-responsive">
                                     </div>
                                 </div>                                
@@ -161,21 +171,19 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 p0 icones">
-                        <i class="material-icons">
-                            verified_user
-                        </i>
+                    <div class="col-lg-3 p0 icones wow animated bounceIn delay-1">
+                        <i class="material-icons">verified_user</i>
                         <h4 class="text-center">Missão</h4>
                     </div>
-                    <div class="col-lg-3 p0 icones">
+                    <div class="col-lg-3 p0 icones wow animated bounceIn delay-2">
                         <i class="material-icons">note</i>
                         <h4 class="text-center">Projetos</h4>
                     </div>
-                    <div class="col-lg-3 p0 icones">
+                    <div class="col-lg-3 p0 icones wow animated bounceIn delay-3">
                         <i class="material-icons">star</i>
                         <h4 class="text-center">Awards</h4>
                     </div>
-                    <div class="col-lg-3 p0 icones">
+                    <div class="col-lg-3 p0 icones wow animated bounceIn delay-4">
                         <i class="material-icons">account_balance</i>
                         <h4 class="text-center">Contacts</h4>
                     </div>
