--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <li><a href="#">item 02</a></li>
                 <li><a href="#">item 03</a></li>
                 <li><a href="#">item 04</a></li>
+                <li><a href="#">item 05</a></li>
+                <li><a href="#">item 06</a></li>
             </ul>
         </div>
     </div>
